tests/ui/rfcs/rfc-2396-target_feature-11/safe-calls.thir.stderr
error[E0133]: call to function `sse2` with `#[target_feature]` is unsafe and requires unsafe function or block
  --> $DIR/safe-calls.rs:21:5
   |
LL |     sse2();
   |     ^^^^^^ call to function with `#[target_feature]`
   |
   = note: can only be called if the required target features are available

error[E0133]: call to function `avx_bmi2` with `#[target_feature]` is unsafe and requires unsafe function or block
  --> $DIR/safe-calls.rs:24:5
   |
LL |     avx_bmi2();
   |     ^^^^^^^^^^ call to function with `#[target_feature]`
   |
   = note: can only be called if the required target features are available

error[E0133]: call to function `Quux::avx_bmi2` with `#[target_feature]` is unsafe and requires unsafe function or block
  --> $DIR/safe-calls.rs:27:5
   |
LL |     Quux.avx_bmi2();
   |     ^^^^^^^^^^^^^^^ call to function with `#[target_feature]`
   |
   = note: can only be called if the required target features are available

error[E0133]: call to function `avx_bmi2` with `#[target_feature]` is unsafe and requires unsafe function or block
  --> $DIR/safe-calls.rs:34:5
   |
LL |     avx_bmi2();
   |     ^^^^^^^^^^ call to function with `#[target_feature]`
   |
   = note: can only be called if the required target features are available

error[E0133]: call to function `Quux::avx_bmi2` with `#[target_feature]` is unsafe and requires unsafe function or block
  --> $DIR/safe-calls.rs:37:5
   |
LL |     Quux.avx_bmi2();
   |     ^^^^^^^^^^^^^^^ call to function with `#[target_feature]`
   |
   = note: can only be called if the required target features are available

error[E0133]: call to function `sse2` with `#[target_feature]` is unsafe and requires unsafe function or block
  --> $DIR/safe-calls.rs:44:5
   |
LL |     sse2();
   |     ^^^^^^ call to function with `#[target_feature]`
   |
   = note: can only be called if the required target features are available

error[E0133]: call to function `avx_bmi2` with `#[target_feature]` is unsafe and requires unsafe function or block
  --> $DIR/safe-calls.rs:47:5
   |
LL |     avx_bmi2();
   |     ^^^^^^^^^^ call to function with `#[target_feature]`
   |
   = note: can only be called if the required target features are available

error[E0133]: call to function `Quux::avx_bmi2` with `#[target_feature]` is unsafe and requires unsafe function or block
  --> $DIR/safe-calls.rs:50:5
   |
LL |     Quux.avx_bmi2();
   |     ^^^^^^^^^^^^^^^ call to function with `#[target_feature]`
   |
   = note: can only be called if the required target features are available

error[E0133]: call to function `sse2` with `#[target_feature]` is unsafe and requires unsafe function or block
  --> $DIR/safe-calls.rs:58:5
   |
LL |     sse2();
   |     ^^^^^^ call to function with `#[target_feature]`
   |
   = note: can only be called if the required target features are available

error[E0133]: call to function `sse2` with `#[target_feature]` is unsafe and requires unsafe function or block
  --> $DIR/safe-calls.rs:63:18
   |
LL | const name: () = sse2();
   |                  ^^^^^^ call to function with `#[target_feature]`
   |
   = note: can only be called if the required target features are available

error: aborting due to 10 previous errors

For more information about this error, try `rustc --explain E0133`.
